--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
       run: docker build . --file Dockerfile --tag scottiee/flask-demo-git-actions:$(date +%s)
 
     - name: Docker Push
-    - run: docker push ${{secrets.DOCKER_USER}}/flask-bare-bones
+      run: docker push ${{secrets.DOCKER_USER}}/flask-bare-bones
 
 
 
