--- a/.github/workflows/docker-image-v5.yml
+++ b/.github/workflows/docker-image-v5.yml
@@ -24,5 +24,5 @@ jobs:
       run: docker build . --file Dockerfile --tag scottiee/flask-demo-git-actions:$(date +%s)
 
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}}/git-flask-demo
+      run: docker push ${{secrets.DOCKER_USER}}/flask-bare-bones:latest
 
