--- a/.github/workflows/docker-image-v5.yml
+++ b/.github/workflows/docker-image-v5.yml
@@ -21,8 +21,8 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker Image
-      run: docker build . --file Dockerfile --tag test/flask-bare-bones:$(date +%s)
+      run: docker build . --file Dockerfile --tag scottiee/flask-bare-bones:$(date +%s)
 
     - name: Docker Push
-      run: docker push test/flask-bare-bones
+      run: docker push scottiee/flask-bare-bones
 
