--- a/.github/workflows/docker-image-v5.yml
+++ b/.github/workflows/docker-image-v5.yml
@@ -24,5 +24,5 @@ jobs:
       run: docker build . --file Dockerfile --tag scottiee/flask-bare-bones:$(date +%s)
 
     - name: Docker Push
-      run: docker push scottiee/flask-bare-bones
+      run: docker push scottiee/flask-bare-bones:v2
 
