--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:latest
+          tags: scottiee/flask-bare-bones:9dec21
